feat: add product by id
